# django-reusable-app-auto

./: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  README.rst  pyproject.toml  tox.ini
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
django_reusable_app_auto/: apps.py  urls.py
docs/: conf.py  index.rst  installation.rst  usage.rst
example/: README.md  pyproject.toml
example/example/: settings.py  urls.py
example/templates/django_reusable_app_auto/: base.html
tests/: settings.py  test_models.py  urls.py
