[tool.poetry]
name = "django-reusable-app-auto"
version = "0.1.0"
description = "Your project description goes here"
authors = ["Andre Guerra <cookiecutter.email>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/AndreGuerra123/django-reusable-app-auto"
repository = "https://github.com/AndreGuerra123/django-reusable-app-auto"
documentation = "https://django-reusable-app-auto.readthedocs.io"
keywords= "django-reusable-app-auto"

[tool.poetry.dependencies]
python = "*"
django = "*"

[tool.poetry.dev-dependencies]
coverage = "*"
tox = "*"
codecov = "*"
sphinx = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
