[tool.poetry]
name = "example"
version = "0.1.0"
description = "An example project with your Django Reusable App Auto app."
authors = ["Andre Guerra <andre.catarino.guerra@protonmail.com>"]

[tool.poetry.dependencies]
python = "*"
django = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
